--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -67,7 +67,7 @@ on late-fs
 
 on init
     # Symbols required for motorola blobs
-    export LD_SHIM_LIBS /system/vendor/bin/adspd|libshim_adsp.so:/system/lib/libjustshoot.so|libjustshoot_shim.so:/system/vendor/lib/libmmcamera_ppeiscore.so|libshim_buffer.so
+    export LD_SHIM_LIBS /system/vendor/bin/adspd|libshim_adsp.so:/system/lib/libjustshoot.so|libjustshoot_shim.so:/system/vendor/lib/libmmcamera_ppeiscore.so|libshim_buffer.so:/system/vendor/lib64/libmdmcutback.so|libqsap_shim.so
 
     write /sys/module/qpnp_rtc/parameters/poweron_alarm 1
 
